feat: Improve Gemini API integration and UI enhancements
Refactors the Gemini service to handle API key loading more robustly and improves error messaging. Updates the `index.html` with critical polyfills and Tailwind CSS configuration for better font handling. Enhances the README with deployment instructions for Vercel and more detailed feature descriptions.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
+    <!-- Import CDN Tailwind pour prévisualisation immédiate (fallback) -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: {
+              montserrat: ['Montserrat', 'sans-serif'],
+              times: ['"Times New Roman"', 'Times', 'serif'],
+            },
+          },
+        },
+      }
+    </script>
+    <!-- POLYFILL CRITIQUE : Empêche le crash "process is not defined" -->
+    <script>
+      window.process = { env: { NODE_ENV: 'production' } };
+    </script>
   </head>
   <body>
     <div id="root"></div>
